2002-01-17  John Levon  <moz@compsoc.man.ac.uk>

	* module/Makefile.in:
	* module/oprofile_nmi.S:
	* module/oprofile_nmi22.S:
	* module/oprofile_nmi24.S: split assembly for 2.2/4 

	* module/compat.h:
	* module/compat22.h:
	* module/compat24.h: s/AFTER/ATLEAST/
 
2002-01-17  John Levon  <moz@compsoc.man.ac.uk>

	* module/compat24.h: define to have ->owner
 
2002-01-17  Philippe Elie  <ph_e@club-internet.fr>

	* gui/oprof_start.h:
	* gui/oprof_start_config.h:
	* gui/oprof_start.cpp: validate the RTC max count

2002-01-17  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update

	* oprofile.c:
	* module/compat24.h: 
	* module/compat22.h: fix compile, nmi wake up check
	 
	* module/op_rtc.c: user/kernel profiling feature
 
2002-01-17  John Levon  <moz@compsoc.man.ac.uk>

	* doc/oprofile.sgml: clarification
 
	* module/compat22.h:
	* module/compat24.h:
	* module/oprofile.c: ->owner fixes
 
2002-01-17  John Levon  <moz@compsoc.man.ac.uk>

	* module/oprofile.h: clean up
 
	* module/compat.h:
	* module/compat22.h:
	* module/compat24.h: split header files up
	  for readability
 
2002-01-17  Philippe Elie  <ph_e@club-internet.fr>

	* TODO: update

	* doc/oprofile.sgml: speach about assembler

	* module/compat.h: small tweak for 2.2, no impact on 2.4

2002-01-16  John Levon  <moz@compsoc.man.ac.uk>

	* configure.in: look for rtc_lock
 
	* module/compat.h: use rtc_lock if there

2002-01-16  Philippe Elie  <ph_e@club-internet.fr>

	* module/compat.h:
	* module/apic_up_compat.h: cleanup + allow compile
	  !CONFIG_X86_LOCAL_APIC on 2.4/2.5. (only compile
	  tested)

2002-01-15  Philippe Elie  <ph_e@club-internet.fr>

	* events/op_events.c: avoid gui crash: event name must
	  contain only one word. If you test RTC patch destroy
	  ~/.oprofile/oprof_start_event#0

2002-01-15  John Levon  <moz@compsoc.man.ac.uk>

	* module/compat.h:
	* module/compat.c:
	* module/op_rtc.c: 2.2 modversions fix
 
2002-01-15  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update

	* module/compat.h: