@@ -131,7 +131,7 @@ do_init() {
 	HASH_MAP_DEVICE_FILE=
 	BUF_SIZE=262144
 	HASH_SIZE=65536
-	NOTE_SIZE=8192
+	NOTE_SIZE=16384
 	KERNEL_ONLY=0
 	IGNORE_MYSELF=0
 	DIR="/var/opd"
