@@ -35,7 +35,7 @@
 #define OP_MAX_HASH_TABLE_SIZE	262144
 #define OP_MIN_HASH_TABLE_SIZE	256
 
-#define OP_DEFAULT_NOTE_SIZE	8192
+#define OP_DEFAULT_NOTE_SIZE	16384
 #define OP_PRE_NOTE_WATERMARK	64
 #define OP_MIN_NOTE_TABLE_SIZE	(1024 + OP_PRE_NOTE_WATERMARK)
 #define OP_MAX_NOTE_TABLE_SIZE	1048576
