@@ -1,5 +1,13 @@
 2002-01-17  John Levon  <moz@compsoc.man.ac.uk>
 
+	* op_user.h:
+	* dae/op_start:
+	* gui/oprof_start_config.h:
+	* module/oprofile.h: bump note size and watermark,
+	  I was getting problems on my dual SMP box in kernel compiles
+ 
+2002-01-17  John Levon  <moz@compsoc.man.ac.uk>
+
 	* module/Makefile.in:
 	* module/oprofile_nmi.S:
 	* module/oprofile_nmi22.S:
